[project]
name = "ats-incident-test"
version = "0.1.0"
description = "ATS process for testing incident handling by generating controlled failures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.3.0" }
